clear shell and add mem options, reinvestigate kafka reset problem